--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.calcamp">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -13,6 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Calcamp"
         tools:targetApi="31">
+        <activity
+            android:name=".TeamLeagueMatch"
+            android:exported="false" />
+        <activity
+            android:name=".view.TeamLeagueScoreActivity"
+            android:exported="false" />
         <activity
             android:name=".view.TeamLeagueActivity"
             android:exported="false" />
