Add entitie.view Classification, Activity Classification your controller, repository, factory and adapter

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:theme="@style/Theme.Calcamp"
         tools:targetApi="31">
         <activity
-            android:name=".TeamLeagueMatch"
+            android:name=".view.ClassificationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.TeamLeagueMatch"
             android:exported="false" />
         <activity
             android:name=".view.TeamLeagueScoreActivity"
