impl: Image add in class Team and method created for transform content of ImageView in Array of byte. Fix: Refactoring activity Team.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
             android:name=".view.LeagueActivity"
             android:exported="false" />
         <activity
-            android:name=".view.EquipesActivity"
+            android:name=".view.TeamActivity"
             android:exported="false" />
         <activity
             android:name=".view.MainActivity"
